Add warning to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -39,6 +39,9 @@ For complete tutorial information, see:
 
 [dataRetrieval Introduction 2](https://rconnect.usgs.gov/NMC_dataRetrieval_2)
 
+:warning: USGS discrete water-quality data availability and format are changing. Beginning in February 2024 the data obtained from legacy profiles will not include new USGS data or recent updates to existing data. To view the status of changes in data availability and code functionality, visit: https://doi-usgs.github.io/dataRetrieval/articles/Status.html
+
+If you have additional questions about these changes, email CompTools@usgs.gov.
 
 # Sample Workflow
 
