--- a/vignettes/join_by_closest.Rmd
+++ b/vignettes/join_by_closest.Rmd
@@ -36,7 +36,7 @@ This article will discuss how to do that using the `data.table` package.
 
 Let's look at site "01646500", and a nearby site with a real-time nitrate-plus-nitrite sensor. Our goal is to get the discharge and nitrate-plus-nitrite sensor data aligned with the discrete water quality samples.
 
-```{r getData}
+```{r getData, eval=TRUE}
 library(dataRetrieval)
 
 site_uv <- "01646500"
